--- a/index.html
+++ b/index.html
@@ -252,6 +252,65 @@
             </div>
         </div>
     </div>
+    <!-- Blog -->
+    <section class="page-section" id="blog">
+        <div class="container px-4 px-lg-5">
+            <h2 class="text-center mt-0">Blog</h2>
+            <hr class="divider" />
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/portfolio/thumbnails/7.jpg"
+                                alt="IU - Love Wins All">
+                            <div class="card-body">
+                                <h5 class="card-title">IU</h5>
+                                <p class="card-text">Love Wins All.</p>
+                                <a href="#" class="btn btn-primary">Check it!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/portfolio/thumbnails/8.jpg"
+                                alt="Le Sserafim - Perfect Night">
+                            <div class="card-body">
+                                <h5 class="card-title">Le Sserafim</h5>
+                                <p class="card-text">Perfect Night</p>
+                                <a href="#" class="btn btn-primary">Check it!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/portfolio/thumbnails/9.jpg" alt="IVE - Baddie">
+                            <div class="card-body">
+                                <h5 class="card-title">IVE</h5>
+                                <p class="card-text">Baddie</p>
+                                <a href="#" class="btn btn-primary">Check it!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/portfolio/thumbnails/10.jpg" alt="NCT127 - ISTJ">
+                            <div class="card-body">
+                                <h5 class="card-title">NCT127</h5>
+                                <p class="card-text">ISTJ</p>
+                                <a href="#" class="btn btn-primary">Check it!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact-->
     <section class="page-section" id="contact">
         <div class="container px-4 px-lg-5">
